--- a/.github/workflows/link_branch_to_issue_on_push.yaml
+++ b/.github/workflows/link_branch_to_issue_on_push.yaml
@@ -22,12 +22,13 @@ jobs:
 
       - name: Authenticate GitHub CLI
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: echo $GITHUB_TOKEN | gh auth login --with-token
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: |
+          gh auth status || gh auth login --with-token <<< "$GH_TOKEN"
 
       - name: Create branch and link to issue
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           # Get the labels
           LABELS="${{ join(github.event.issue.labels.*.name, ', ') }}"
