--- a/.github/workflows/create-branch-on-issue.yaml
+++ b/.github/workflows/create-branch-on-issue.yaml
@@ -38,10 +38,10 @@ jobs:
           fi
 
           # Remove any [TYPE] prefix from the title if it exists
-          TITLE_WITHOUT_PREFIX=$(echo "${{ github.event.issue.id }}-${{ github.event.issue.title }}" | sed 's/^\[[^]]*\] //')
+          TITLE_WITHOUT_PREFIX=$(echo "${{ github.event.issue.title }}" | sed 's/^\[[^]]*\] //')
 
           # Convert title to lowercase, replace spaces with hyphens, and remove invalid characters
-          BRANCH_NAME=$(echo "${TITLE_WITHOUT_PREFIX}" | tr '[:upper:]' '[:lower:]' | sed -e 's/[^a-zA-Z0-9-]/-/g' -e 's/--*/-/g' -e 's/^-//' -e 's/-$//')
+          BRANCH_NAME=$(echo " ${{ github.event.issue.number }} -${TITLE_WITHOUT_PREFIX}" | tr '[:upper:]' '[:lower:]' | sed -e 's/[^a-zA-Z0-9-]/-/g' -e 's/--*/-/g' -e 's/^-//' -e 's/-$//')
 
           # Create the final branch name
           BRANCH_NAME="${ISSUE_TYPE}-${BRANCH_NAME}"
@@ -62,5 +62,3 @@ jobs:
           fi
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
-      
