--- a/robot-web-application/package.json
+++ b/robot-web-application/package.json
@@ -35,5 +35,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@iconify/react": "^5.0.1",
+    "@iconify/tailwind": "^1.1.1"
   }
 }
