--- a/robot-web-application/package.json
+++ b/robot-web-application/package.json
@@ -13,8 +13,7 @@
     "axios": "^1.7.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^6.26.1",
-    "recharts": "^2.12.7"
+    "react-router-dom": "^6.26.1"
   },
   "devDependencies": {
     "@iconify/react": "^5.0.1",
