--- a/robot-web-application/package.json
+++ b/robot-web-application/package.json
@@ -19,6 +19,7 @@
   "devDependencies": {
     "@iconify/react": "^5.0.1",
     "@iconify/tailwind": "^1.1.1",
+    "@types/react": "^18.3.11",
     "@vitejs/plugin-react": "^4.0.3",
     "autoprefixer": "^10.4.19",
     "eslint": "^8.45.0",
