--- a/robot-web-application/package.json
+++ b/robot-web-application/package.json
@@ -14,7 +14,8 @@
     "p5": "^1.11.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^6.26.1"
+    "react-router-dom": "^6.26.1",
+    "underscore": "^1.13.7"
   },
   "devDependencies": {
     "@iconify/react": "^5.0.1",
